--- a/.github/workflows/merge_stage_test.yml
+++ b/.github/workflows/merge_stage_test.yml
@@ -54,7 +54,7 @@ jobs:
         run: rm -rf .eggs && pip install -e .
       - name: Run unittests and generate coverage report
         run: |
-          coverage run --branch --source mmedit -m pytest tests/
+          coverage run --branch --source mmagic -m pytest tests/
           coverage xml
           coverage report -m
 
@@ -100,7 +100,7 @@ jobs:
         run: rm -rf .eggs && pip install -e .
       - name: Run unittests and generate coverage report
         run: |
-          coverage run --branch --source mmedit -m pytest tests/
+          coverage run --branch --source mmagic -m pytest tests/
           coverage xml --omit="**/stylegan3_ops/*,**/conv2d_gradfix.py,**/grid_sample_gradfix.py,**/misc.py,**/upfirdn2d.py,**all_gather_layer.py"
           coverage report -m
       # Only upload coverage report for python3.7 && pytorch1.8.1 cpu
@@ -141,7 +141,7 @@ jobs:
           apt-get update && apt-get install -y ffmpeg libsm6 libxext6 git ninja-build libglib2.0-0 libsm6 libxrender-dev libxext6
       - name: Install PyTorch
         run: pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
-      - name: Install mmediting dependencies
+      - name: Install mmagic dependencies
         run: |
           pip install -U openmim
           mim install 'mmcv >= 2.0.0'
@@ -177,7 +177,7 @@ jobs:
           apt-get update && apt-get install -y ffmpeg libsm6 libxext6 git ninja-build libglib2.0-0 libsm6 libxrender-dev libxext6
       - name: Install PyTorch
         run: pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu
-      - name: Install mmediting dependencies
+      - name: Install mmagic dependencies
         run: |
           pip install git+https://github.com/open-mmlab/mmengine.git@main
           pip install -U openmim
@@ -188,7 +188,7 @@ jobs:
           pip install -e .
       - name: Run unittests and generate coverage report
         run: |
-          coverage run --branch --source mmedit -m pytest tests/
+          coverage run --branch --source mmagic -m pytest tests/
           coverage xml --omit="**/stylegan3_ops/*,**/conv2d_gradfix.py,**/grid_sample_gradfix.py,**/misc.py,**/upfirdn2d.py,**all_gather_layer.py"
           coverage report -m
 
@@ -210,7 +210,7 @@ jobs:
         run: python -m pip install lmdb
       - name: Install PyTorch
         run: python -m pip install torch==1.8.1+${{matrix.platform}} torchvision==0.9.1+${{matrix.platform}} -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
-      - name: Install mmediting dependencies
+      - name: Install mmagic dependencies
         run: |
           python -m pip install git+https://github.com/open-mmlab/mmengine.git@main
           python -m pip install -U openmim
