--- a/.github/workflows/test_mim.yml
+++ b/.github/workflows/test_mim.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Build and install
         run: rm -rf .eggs && mim install -e .
       - name: test commands of mim
-        run: mim search mmedit
+        run: mim search mmagic
