--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ SPLIT_PENALTY_AFTER_OPENING_BRACKET=888
 line_length = 79
 multi_line_output = 0
 extra_standard_library = setuptools
-known_first_party = mmedit
+known_first_party = mmagic
 known_third_party = PIL,cv2,lmdb,mmcv,numpy,onnx,onnxruntime,packaging,pymatting,pytest,pytorch_sphinx_theme,requests,scipy,titlecase,torch,torchvision,ts
 no_lines_before = STDLIB,LOCALFOLDER
 default_section = THIRDPARTY
