--- a/configs/stable_diffusion/metafile.yml
+++ b/configs/stable_diffusion/metafile.yml
@@ -15,6 +15,13 @@ Models:
   - Dataset: '-'
     Metrics: {}
     Task: Text2Image
+- Config: configs/stable_diffusion/stable-diffusion_ddim_denoisingunet-tomesd_5e-1.py
+  In Collection: Stable Diffusion
+  Name: stable-diffusion_ddim_denoisingunet-tomesd_5e-1
+  Results:
+  - Dataset: '-'
+    Metrics: {}
+    Task: Text2Image
   - Dataset: '-'
     Metrics:
       Size / Num images per prompt:
