Update tomesd tutorials

--- a/configs/stable_diffusion/metafile.yml
+++ b/configs/stable_diffusion/metafile.yml
@@ -28,3 +28,9 @@ Models:
         PSNR: 512.0
         SSIM: 5.0
     Task: Text2Image
+  - Dataset: '-'
+    Metrics:
+      Size / Num images per prompt:
+        PSNR: 512.0
+        SSIM: 5.0
+    Task: Text2Image
