--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,10 @@ batchscript-*
 *.png
 *.jpg
 *.zip
+work_dir/deblurganv2_fpn_inception.py
+work_dir/20230601_175552/vis_data/config.py
+work_dir/20230601_175457/vis_data/config.py
+work_dir/20230601_174055/vis_data/config.py
+work_dir/20230601_173020/vis_data/config.py
+work_dir/20230601_172701/vis_data/config.py
+work_dir/20230601_172446/vis_data/config.py
