--- a/model-index.yml
+++ b/model-index.yml
@@ -49,6 +49,7 @@ Import:
 - configs/styleganv3/metafile.yml
 - configs/swinir/metafile.yml
 - configs/tdan/metafile.yml
+- configs/textual_inversion/metafile.yml
 - configs/tof/metafile.yml
 - configs/ttsr/metafile.yml
 - configs/wgan-gp/metafile.yml
