支持 DeblurGANv2 inference
Fix CI test

--- a/configs/deblurganv2/metafile.yml
+++ b/configs/deblurganv2/metafile.yml
@@ -1,30 +1,32 @@
 Collections:
-- Name: DEBLURGANV2
+- Name: DeblurGAN-v2
   Paper:
     Title: 'DeblurGAN-v2: Deblurring (Orders-of-Magnitude) Faster and Better'
     URL: https://arxiv.org/abs/1908.03826
   README: configs/deblurganv2/README.md
   Task:
-  - Image Super-Resolution
+  - image super-resolution
   Year: 2019
 Models:
 - Config: configs/deblurganv2/deblurganv2_fpn_inception.py
-  In Collection: DEBLURGANV2
+  In Collection: DeblurGAN-v2
   Name: deblurganv2_fpn_inception
   Results:
-  - Dataset: GOPRO
+  - Dataset: GoProTestDataset
     Metrics:
-      PSNR: 29.55
-      SSIM: 0.934
+      PSNR/<br/>SSIM:
+        PSNR: 29.55
+        SSIM: 0.934
     Task: Image Super-Resolution
   Weights: https://drive.google.com/uc?export=view&id=1UXcsRVW-6KF23_TNzxw-xC0SzaMfXOaR
 - Config: configs/deblurganv2/deblurganv2_fpn_mobilenet.py
-  In Collection: DEBLURGANV2
+  In Collection: DeblurGAN-v2
   Name: deblurganv2_fpn_mobilenet
   Results:
-  - Dataset: GOPRO
+  - Dataset: GoProTestDataset
     Metrics:
-      PSNR: 28.17
-      SSIM: 0.925
+      PSNR/<br/>SSIM:
+        PSNR: 28.17
+        SSIM: 0.925
     Task: Image Super-Resolution
   Weights: https://drive.google.com/uc?export=view&id=1JhnT4BBeKBBSLqTo6UsJ13HeBXevarrU
