--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
       - id: fix-encoding-pragma
         args: ["--remove"]
       - id: mixed-line-ending
-        args: ["--fix=lf"]
+        args: ["--fix=auto"]
   - repo: https://github.com/codespell-project/codespell
     rev: v2.1.0
     hooks:
