支持 DeblurGANv2 inference
move the implementation of loss function to mmagic/models/losses
add quick start to readme

--- a/configs/deblurganv2/metafile.yml
+++ b/configs/deblurganv2/metafile.yml
@@ -5,28 +5,28 @@ Collections:
     URL: https://arxiv.org/abs/1908.03826
   README: configs/deblurganv2/README.md
   Task:
-  - image super-resolution
+  - deblurring
   Year: 2019
 Models:
-- Config: configs/deblurganv2/deblurganv2_fpn_inception.py
+- Config: configs/deblurganv2/deblurganv2_fpn-inception_1xb1_gopro.py
   In Collection: DeblurGAN-v2
-  Name: deblurganv2_fpn_inception
+  Name: deblurganv2_fpn-inception_1xb1_gopro
   Results:
   - Dataset: GoProTestDataset
     Metrics:
       PSNR/<br/>SSIM:
         PSNR: 29.55
         SSIM: 0.934
-    Task: Image Super-Resolution
-  Weights: https://drive.google.com/uc?export=view&id=1UXcsRVW-6KF23_TNzxw-xC0SzaMfXOaR
-- Config: configs/deblurganv2/deblurganv2_fpn_mobilenet.py
+    Task: Deblurring
+  Weights: https://download.openxlab.org.cn/models/xiaomile/DeblurGANv2/weight/DeblurGANv2_fpn-inception
+- Config: configs/deblurganv2/deblurganv2_fpn-mobilenet_1xb1_gopro.py
   In Collection: DeblurGAN-v2
-  Name: deblurganv2_fpn_mobilenet
+  Name: deblurganv2_fpn-mobilenet_1xb1_gopro
   Results:
   - Dataset: GoProTestDataset
     Metrics:
       PSNR/<br/>SSIM:
         PSNR: 28.17
         SSIM: 0.925
-    Task: Image Super-Resolution
-  Weights: https://drive.google.com/uc?export=view&id=1JhnT4BBeKBBSLqTo6UsJ13HeBXevarrU
+    Task: Deblurring
+  Weights: https://download.openxlab.org.cn/models/xiaomile/DeblurGANv2/weight/DeblurGANv2_fpn-mobilenet
