--- a/configs/stable_diffusion/metafile.yml
+++ b/configs/stable_diffusion/metafile.yml
@@ -34,3 +34,10 @@ Models:
         PSNR: 512.0
         SSIM: 5.0
     Task: Text2Image
+- Config: configs/stable_diffusion/stable-diffusion_ddim_denoisingunet-inpaint.py
+  In Collection: Stable Diffusion
+  Name: stable-diffusion_ddim_denoisingunet-inpaint
+  Results:
+  - Dataset: '-'
+    Metrics: {}
+    Task: Text2Image
