Taited/stable diffusion inpaint (#1976)
* support stable diffusion inpaint

* add unit test for stable diffusion inpaint

* fix unit tests and update model zoo error

* fix unit test bug

* fix unit test error, add attribute latent_channels for vae

* fix lint: add the new config in readme

* improve docstrings and readme for stable diffusion inpaint

* add copyright of HuggingFace Team and markdown code language type

---------

Co-authored-by: zengyanhong <zengyh1900@gmail.com>

--- a/configs/stable_diffusion/metafile.yml
+++ b/configs/stable_diffusion/metafile.yml
@@ -6,6 +6,7 @@ Collections:
   README: configs/stable_diffusion/README.md
   Task:
   - text2image
+  - inpainting
   Year: 2022
 Models:
 - Config: configs/stable_diffusion/stable-diffusion_ddim_denoisingunet.py
@@ -14,23 +15,30 @@ Models:
   Results:
   - Dataset: '-'
     Metrics: {}
-    Task: Text2Image
+    Task: Text2Image, Inpainting
 - Config: configs/stable_diffusion/stable-diffusion_ddim_denoisingunet-tomesd_5e-1.py
   In Collection: Stable Diffusion
   Name: stable-diffusion_ddim_denoisingunet-tomesd_5e-1
   Results:
   - Dataset: '-'
     Metrics: {}
-    Task: Text2Image
+    Task: Text2Image, Inpainting
   - Dataset: '-'
     Metrics:
       Size / Num images per prompt:
         PSNR: 512.0
         SSIM: 5.0
-    Task: Text2Image
+    Task: Text2Image, Inpainting
   - Dataset: '-'
     Metrics:
       Size / Num images per prompt:
         PSNR: 512.0
         SSIM: 5.0
-    Task: Text2Image
+    Task: Text2Image, Inpainting
+- Config: configs/stable_diffusion/stable-diffusion_ddim_denoisingunet-inpaint.py
+  In Collection: Stable Diffusion
+  Name: stable-diffusion_ddim_denoisingunet-inpaint
+  Results:
+  - Dataset: '-'
+    Metrics: {}
+    Task: Text2Image, Inpainting
