revise README and task parsing logic in update_model_index.py

--- a/configs/stable_diffusion/metafile.yml
+++ b/configs/stable_diffusion/metafile.yml
@@ -21,6 +21,15 @@ Models:
   Name: stable-diffusion_ddim_denoisingunet-tomesd_5e-1
   Results:
   - Dataset: '-'
+    Metrics: {}
+    Task: Text2Image
+  - Dataset: '-'
+    Metrics:
+      Size / Num images per prompt:
+        PSNR: 512.0
+        SSIM: 5.0
+    Task: Text2Image
+  - Dataset: '-'
     Metrics:
       Size / Num images per prompt:
         PSNR: 512.0
