update flake8 checking config in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,13 @@ known_first_party = mmagic
 known_third_party = PIL,cv2,lmdb,mmcv,numpy,onnx,onnxruntime,packaging,pymatting,pytest,pytorch_sphinx_theme,requests,scipy,titlecase,torch,torchvision,ts
 no_lines_before = STDLIB,LOCALFOLDER
 default_section = THIRDPARTY
+
+[flake8]
+# The E251 check is conflict with yapf in some situation.
+# See https://github.com/google/yapf/issues/393
+extend-ignore = E251
+# The F401 check is wrong if the `__all__` variable is modified
+# in `__init__.py`
+per-file-ignores =
+    */__init__.py: F401
+    mmagic/configs/*: F401,F403,F405
