--- a/configs/draggan/metafile.yml
+++ b/configs/draggan/metafile.yml
@@ -48,15 +48,15 @@ Models:
       Precision50k: 0.0
       Recall50k: 0.0
     Task: DragGAN
-  Weights: ./checkpoints/stylegan2-horse_256_pytorch_mmagic.pth
+  Weights: https://download.openxlab.org.cn/models/qsun1/DragGAN-StyleGAN2-checkpoint/weight//StyleGAN2-lsun-horses
 - Config: configs/draggan/stylegan2_1024x1024.py
   In Collection: DragGAN
   Name: stylegan2_1024x1024
   Results:
-  - Dataset: LSUN-Horse
+  - Dataset: InternetDogs
     Metrics:
       FID50k: 0.0
       Precision50k: 0.0
       Recall50k: 0.0
     Task: DragGAN
-  Weights: ./checkpoints/stylegan2-dogs_1024_pytorch_mmagic.pth
+  Weights: https://download.openxlab.org.cn/models/qsun1/DragGAN-StyleGAN2-checkpoint/weight//StyleGAN2-dogs-internet
