add another 2 checkpoints, cat256 & car512

--- a/configs/draggan/metafile.yml
+++ b/configs/draggan/metafile.yml
@@ -37,7 +37,13 @@ Models:
       Precision50k: 0.0
       Recall50k: 0.0
     Task: DragGAN
-  Weights: https://download.openxlab.org.cn/models/qsun1/DragGAN-StyleGAN2-checkpoint/weight//StyleGAN2-FFHQ
+  - Dataset: Car
+    Metrics:
+      FID50k: 0.0
+      Precision50k: 0.0
+      Recall50k: 0.0
+    Task: DragGAN
+  Weights: https://download.openxlab.org.cn/models/qsun1/DragGAN-StyleGAN2-checkpoint/weight//StyleGAN2-dogs-internet
 - Config: configs/draggan/stylegan2_256x256.py
   In Collection: DragGAN
   Name: stylegan2_256x256
@@ -48,7 +54,13 @@ Models:
       Precision50k: 0.0
       Recall50k: 0.0
     Task: DragGAN
-  Weights: https://download.openxlab.org.cn/models/qsun1/DragGAN-StyleGAN2-checkpoint/weight//StyleGAN2-lsun-horses
+  - Dataset: Cat
+    Metrics:
+      FID50k: 0.0
+      Precision50k: 0.0
+      Recall50k: 0.0
+    Task: DragGAN
+  Weights: https://download.openxlab.org.cn/models/qsun1/DragGAN-StyleGAN2-checkpoint/weight//StyleGAN2-dogs-internet
 - Config: configs/draggan/stylegan2_1024x1024.py
   In Collection: DragGAN
   Name: stylegan2_1024x1024
