--- a/setup.cfg
+++ b/setup.cfg
@@ -31,4 +31,5 @@ extend-ignore = E251
 # in `__init__.py`
 per-file-ignores =
     */__init__.py: F401
-    mmagic/configs/*: F401,F403,F405
+    mmagic/configs/*: F401,F403,F405,E501
+ignore = F403,F405,E501
