--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,4 @@ extend-ignore = E251
 per-file-ignores =
     */__init__.py: F401
     mmagic/configs/*: F401,F403,F405,E501
-ignore = F401,F403,F405,E501
+    configs/*: F401,F403,F405,E501
