--- a/model-index.yml
+++ b/model-index.yml
@@ -54,4 +54,5 @@ Import:
 - configs/textual_inversion/metafile.yml
 - configs/tof/metafile.yml
 - configs/ttsr/metafile.yml
+- configs/vico/metafile.yml
 - configs/wgan-gp/metafile.yml
