--- a/model-index.yml
+++ b/model-index.yml
@@ -12,6 +12,7 @@ Import:
 - configs/deepfillv1/metafile.yml
 - configs/deepfillv2/metafile.yml
 - configs/dic/metafile.yml
+- configs/diffusers_pipeline/metafile.yml
 - configs/dim/metafile.yml
 - configs/disco_diffusion/metafile.yml
 - configs/draggan/metafile.yml
