[CodeCamp2023-369] Adding support for FastComposer (#2011)
* 1st

* debug

* 20230710 调整

* 调整代码，整合模型，避免editors import 过多class

* 调整代码，整合模型，避免editors import 过多class

* 支持 DeblurGANv2 inference

demo 示例
python mmagic\demo\mmagic_inference_demo.py --model-name deblurganv2 --model-comfig ../configs/deblurganv2/deblurganv2_fpn_inception.py --model-ckpt 权重文件路径 --img 测试图片路径 --device cpu --result-out-dir ./out.png

* 支持 DeblurGANv2 inference

fix CI test

* 支持 DeblurGANv2 inference

fix CI test

* 支持 DeblurGANv2 inference

fix CI test

* 支持 DeblurGANv2 inference

update model-index

* 支持 DeblurGANv2 inference

Fix CI Test

* 支持 DeblurGANv2 inference

CI test fix and update readme.md

* 支持 DeblurGANv2 inference

fix CI test and update readme.md

* 支持 DeblurGANv2 inference

Fix CI test

* 支持 DeblurGANv2 inference

yapf 修正

* 支持 DeblurGANv2 inference

代码调整，参数名保持一致

* 支持 DeblurGANv2 inference

doc string coverage

* 支持 DeblurGANv2 inference

add some doc string

* 支持 DeblurGANv2 inference

add some doc string

* 支持 DeblurGANv2 inference

* 支持 DeblurGANv2 inference

* 支持 DeblurGANv2 inference

* 支持 DeblurGANv2 inference

* 支持 DeblurGANv2 inference

add unit test

* 支持 DeblurGANv2 inference

add unit test

* 支持 DeblurGANv2 inference

add unit test

* 支持 DeblurGANv2 inference

fix unit test

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update .gitignore

Co-authored-by: Yanhong Zeng <zengyh1900@gmail.com>

* Update configs/deblurganv2/README.md

Co-authored-by: Yanhon

--- a/model-index.yml
+++ b/model-index.yml
@@ -20,6 +20,7 @@ Import:
 - configs/edvr/metafile.yml
 - configs/eg3d/metafile.yml
 - configs/esrgan/metafile.yml
+- configs/fastcomposer/metafile.yml
 - configs/flavr/metafile.yml
 - configs/gca/metafile.yml
 - configs/ggan/metafile.yml
