--- a/configs/dreambooth/metafile.yml
+++ b/configs/dreambooth/metafile.yml
@@ -44,3 +44,10 @@ Models:
   - Dataset: '-'
     Metrics: {}
     Task: Text2Image
+- Config: configs/dreambooth/dreambooth-lora-prior_pre.py
+  In Collection: DreamBooth
+  Name: dreambooth-lora-prior_pre_backpack
+  Results:
+  - Dataset: 'google/dreambooth'
+    Metrics: {}
+    Task: Text2Image
