--- a/configs/dreambooth/metafile.yml
+++ b/configs/dreambooth/metafile.yml
@@ -16,6 +16,13 @@ Models:
   - Dataset: '-'
     Metrics: {}
     Task: Text2Image
+- Config: configs/dreambooth/dreambooth-lora-prior_pre_backpack.py
+  In Collection: DreamBooth
+  Name: dreambooth-lora-prior_pre_backpack
+  Results:
+  - Dataset: '-'
+    Metrics: {}
+    Task: Text2Image
 - Config: configs/dreambooth/dreambooth-finetune_text_encoder.py
   In Collection: DreamBooth
   Name: dreambooth-finetune_text_encoder
