--- a/model-index.yml
+++ b/model-index.yml
@@ -49,6 +49,7 @@ Import:
 - configs/srcnn/metafile.yml
 - configs/srgan_resnet/metafile.yml
 - configs/stable_diffusion/metafile.yml
+- configs/stable_diffusion_xl/metafile.yml
 - configs/styleganv1/metafile.yml
 - configs/styleganv2/metafile.yml
 - configs/styleganv3/metafile.yml
