--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,10 +3,11 @@ version: 2
 formats: [pdf, epub]
 
 build:
-    os: ubuntu-22.04
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
 
 python:
-    version: 3.7
-    install:
-      - requirements: requirements/docs.txt
-      - requirements: requirements/readthedocs.txt
+  install:
+    - requirements: requirements/docs.txt
+    - requirements: requirements/readthedocs.txt
