--- a/.github/workflows/pr_stage_test.yml
+++ b/.github/workflows/pr_stage_test.yml
@@ -23,10 +23,10 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
         include:
-          - torch: 1.8.1
-            torchvision: 0.9.1
+          - torch: 1.13.0
+            torchvision: 0.14.0
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -69,10 +69,10 @@ jobs:
   build_cu102:
     runs-on: ubuntu-22.04
     container:
-      image: pytorch/pytorch:1.8.1-cuda10.2-cudnn7-devel
+      image: pytorch/pytorch:2.1.0-cuda11.8-cudnn8-devel
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -90,7 +90,7 @@ jobs:
           apt-get update
           apt-get install -y ffmpeg libsm6 libxext6 git ninja-build libglib2.0-0 libxrender-dev
       - name: Install PyTorch
-        run: pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+        run: pip install torch==2.1.0+cpu torchvision==0.16.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmagic dependencies
         run: |
           pip install git+https://github.com/open-mmlab/mmengine.git@main
@@ -108,7 +108,7 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
         platform: [cpu, cu111]
     steps:
       - uses: actions/checkout@v3
@@ -121,7 +121,7 @@ jobs:
       - name: Install lmdb
         run: python -m pip install lmdb
       - name: Install PyTorch
-        run: python -m pip install torch==1.8.1+${{matrix.platform}} torchvision==0.9.1+${{matrix.platform}} -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
+        run: python -m pip install torch==2.1.0+${{matrix.platform}} torchvision==0.16.0+${{matrix.platform}}
       - name: Install mmagic dependencies
         run: |
           python -m pip install git+https://github.com/open-mmlab/mmengine.git@main
