--- a/.github/workflows/pr_stage_test.yml
+++ b/.github/workflows/pr_stage_test.yml
@@ -121,7 +121,7 @@ jobs:
       - name: Install lmdb
         run: python -m pip install lmdb
       - name: Install PyTorch
-        run: python -m pip install torch==2.1.0+${{matrix.platform}} torchvision==0.16.0+${{matrix.platform}}
+        run: python -m pip install torch==2.1.0+${{matrix.platform}} torchvision==0.16.0+${{matrix.platform}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmagic dependencies
         run: |
           python -m pip install git+https://github.com/open-mmlab/mmengine.git@main
